release: prepare ToppleCat 0.2.1